--- a/friends/src/index.css
+++ b/friends/src/index.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+* {
+  box-sizing: border-box;
+  font-family: 'Poppins',
+    sans-serif;
+}
+
 body {
+  background: black;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
